[gd_scene load_steps=37 format=2]

[ext_resource path="res://sprites/centipede/body/body_frame4.png" type="Texture" id=1]
[ext_resource path="res://sprites/centipede/body/body_frame5.png" type="Texture" id=2]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame5.png" type="Texture" id=3]
[ext_resource path="res://sprites/centipede/head/head_frame3.png" type="Texture" id=4]
[ext_resource path="res://sprites/centipede/head/head_frame5.png" type="Texture" id=5]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame3.png" type="Texture" id=6]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame4.png" type="Texture" id=7]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame7.png" type="Texture" id=8]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame8.png" type="Texture" id=9]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame8.png" type="Texture" id=10]
[ext_resource path="res://sprites/centipede/head/head_frame2.png" type="Texture" id=11]
[ext_resource path="res://sprites/centipede/head/head_frame4.png" type="Texture" id=12]
[ext_resource path="res://sprites/centipede/body/body_frame3.png" type="Texture" id=13]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame1.png" type="Texture" id=14]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame1.png" type="Texture" id=15]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame6.png" type="Texture" id=16]
[ext_resource path="res://sprites/centipede/body/body_frame6.png" type="Texture" id=17]
[ext_resource path="res://sprites/centipede/body/body_frame2.png" type="Texture" id=18]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame3.png" type="Texture" id=19]
[ext_resource path="res://sprites/centipede/body/body_frame8.png" type="Texture" id=20]
[ext_resource path="res://sprites/centipede/head/head_frame7.png" type="Texture" id=21]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame2.png" type="Texture" id=22]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame4.png" type="Texture" id=23]
[ext_resource path="res://sprites/centipede/head/head_frame6.png" type="Texture" id=24]
[ext_resource path="res://sprites/centipede/body/body_frame7.png" type="Texture" id=25]
[ext_resource path="res://sprites/centipede/body/body_frame1.png" type="Texture" id=26]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame5.png" type="Texture" id=27]
[ext_resource path="res://sprites/centipede/head/head_frame8.png" type="Texture" id=28]
[ext_resource path="res://sprites/centipede/head/head_turning/head_turn_frame6.png" type="Texture" id=29]
[ext_resource path="res://sprites/centipede/head/head_frame1.png" type="Texture" id=30]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame2.png" type="Texture" id=31]
[ext_resource path="res://sprites/centipede/body/body_turn/body_turn_frame7.png" type="Texture" id=32]
[ext_resource path="res://old/bug_segment.gd" type="Script" id=33]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.4914, 3.98473 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 23 ), ExtResource( 3 ), ExtResource( 29 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "turn",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 13 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 31 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 32 ), ExtResource( 10 ) ],
"loop": false,
"name": "turn",
"speed": 7.0
} ]

[node name="Segment" type="Area2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.51141, 3.95689 )
shape = SubResource( 1 )

[node name="Head" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 6
playing = true
centered = false

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 6
playing = true
centered = false

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3, 4 )
scale = Vector2( 0.5, 0.1 )
enabled = true
cast_to = Vector2( -10, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 4, 4 )
scale = Vector2( 0.5, 0.1 )
enabled = true
cast_to = Vector2( 10, 0 )
collide_with_areas = true
collide_with_bodies = false

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
